  more than 8 bits per pixel (changes to tests/fbutils.c):
  * Removed the code that attempts to change colormap
  * Temporarily commented out the code that opens /dev/tty1 (does not work on all targets)

- Fixed the test program so that the crosshair is drawn XORed with the text on the screen,
  so the text is not corrupted when the crosshair moves over it. (tests/fbutils.c)

2002-06-19  Douglas Lowder <dlowder@earthlink.net>

- Fixed a problem that caused tslib_parse_vars() (src/ts_parse_vars.c) to not
  read parameters correctly from the ts.conf file.

- Made modifications to simplify and improve the performance of the dejitter filter
  (plugins/dejitter.c).

- Added the configure script and Makefile.in files, plus other files generated by
  autogen.sh, so that only "configure" needs to be run before running "make".
  If a user wishes to rerun the automake and autoconf steps, run "autogen-clean.sh"
  and then "autogen.sh".

2002-06-17  Douglas Lowder <dlowder@earthlink.net>

- I added a simple script, autogen-clean.sh, to make it easier to change configure.in
  and regenerate configure scripts and Makefiles.

- I made modifications so that npitre's new input API code is now wrapped in
  #ifdef USE_INPUT_API.  Added a new configure flag, --enable-inputapi, which
  is turned on by default, and which adds -DUSE_INPUT_API to CFLAGS in all the
  Makefiles.  --disable-inputapi will return the code to its original behavior
  of opening /dev/touchscreen/ucb1x00 and reading events directly.

- I modified plugins/linear.c so that it determines the full linear transformation
  between touchscreen and framebuffer coordinate systems.  This method not only
  rescales and offsets the coordinates correctly, but also automatically takes care
  of rotation or tilt between the coordinate systems, and automatically takes care
  of cases where X and Y are interchanged.  Therefore, the xyswap parameter is
  no longer required or used.
